@@ -126,5 +126,8 @@ nfroots(a^2-a+3,a*(x^2-4))
 
 nffactor(y^2+7, (11*x)^4 - 10*(11*x)^2 + 1)
 
+\\ #2009
+nffactor(y^8-y^6+y^4-y^2+1,x^4-1)
+
 \\ Errors, keep at end of file
 polhensellift(x^2+x+1,[x+a,x+a+1],2,10)
