@@ -169,6 +169,7 @@ BA  129- default(strictargs,1); my(a=2);(f(b,c)=123);f(1) => SEGV [#2004]
          {setrand(2);p=x^8-1661000*x^6+967427199776*x^4-230628391373468096*x^2
           +19278898978723566612544;bnfinit(p).cyc}
          => [60,2,2,2,2,2,2,2,2,2] instead of [6,2]
+    143- nffactor(y^8-y^6+y^4-y^2+1,x^4-1) -> concatenation error [#2009]
 
   Added
       1- [libari] ZM_isidentity
